1. Show prompt when there is no any movie displayed. 2. Correct card height is too long while there is just one row of cards shown. 3. Uniform height of each card.

--- a/style.css
+++ b/style.css
@@ -17,3 +17,17 @@
   width: 23%;
   margin: 0 1%;
 }
+
+.pseudo-card {
+  min-height: 50vh;
+  border: none;
+}
+
+.card-img-top {
+  height: 50vh;
+  object-fit: contain;
+}
+
+.card-title {
+  height: 10vh;
+}
